# vec-new

./: Cargo.toml  README.md
completions/: vec-new.fish
src/: main.rs
